@@ -248,6 +248,7 @@ tiberium-blue-saturation-slowdown=Blue Tiberium Post-Saturation Growth Rate
 tiberium-starting-area=Tiberium in Starting Area
 tiberium-wont-damage-biters=Biters Immune to Tiberium Damage
 tiberium-pollution-multiplier=Tiberium Pollution Multiplier
+tiberium-direct-catalyst=Require Resource Seed for Transmutation
 tiberium-easy-recipes=Easy Mode
 tiberium-byproduct-1=Refining Sludge Waste
 tiberium-byproduct-2=Refining Sulfur Waste
@@ -263,6 +264,7 @@ tiberium-item-damage-scale=Inventory Tiberium Damage Scale
 tiberium-auto-scale-performance=Tiberium Growth Optimization
 
 [mod-setting-description]
+tiberium-direct-catalyst=Requires a bit of the target resource as a seed for transmutation recipes. Helps prevent resources from other mods from being unlocked out of order.\nDefault: disabled
 tiberium-easy-recipes=Simplifies recipes by removing all catalysts and introducing early transmutation recipes so you never have to deal with centrifuging. For the full experience, also turn off the Waste settings below.\nDefault: disabled
 tiberium-byproduct-1=Whether refining recipes produce Tiberium Sludge waste.\nDefault: enabled
 tiberium-byproduct-2=Whether refining recipes produce Sulfur waste.\nDefault: disabled
