@@ -69,38 +69,45 @@ data:extend{
 	},
 	{
 		type = "bool-setting",
-		name = "tiberium-easy-recipes",
+		name = "tiberium-direct-catalyst",
 		setting_type = "startup",
 		default_value = false,
 		order = "b3",
 	},
 	{
 		type = "bool-setting",
+		name = "tiberium-easy-recipes",
+		setting_type = "startup",
+		default_value = false,
+		order = "b4",
+	},
+	{
+		type = "bool-setting",
 		name = "tiberium-byproduct-1",
 		setting_type = "startup",
 		default_value = true,
-		order = "b4",
+		order = "b5",
 	},
 	{
 		type = "bool-setting",
 		name = "tiberium-byproduct-2",
 		setting_type = "startup",
 		default_value = false,
-		order = "b5",
+		order = "b6",
 	},
 	{
 		type = "bool-setting",
 		name = "tiberium-byproduct-direct",
 		setting_type = "startup",
 		default_value = false,
-		order = "b6",
+		order = "b7",
 	},
 	{
 		type = "bool-setting",
 		name = "tiberium-auto-scale-performance",
 		setting_type = "startup",
 		default_value = false,
-		order = "b7",
+		order = "b8",
 	},
 	{
 		type = "bool-setting",
